# SageMem

./: PLAN.md  README.md  pyproject.toml
benchmarks/: common.py  run_all.py  tier_latency.py
benchmarks/baselines/: flat_memory.py
benchmarks/workloads/: debate.py  parallel_search.py  research.py
demo/server/: main.py  scenario.py
demo/ui/: index.html
docs/: architecture.md  benchmarks.md  coherence-protocol.md  quiz.md
examples/: parallel_search.py  research_assistant.py
src/sagemem/: __init__.py  agent.py  hierarchy.py  metrics.py  scope.py
src/sagemem/coherence/: bus.py  merge.py  protocol.py
src/sagemem/llm/: anthropic.py  base.py
src/sagemem/tiers/: base.py  dram.py  l1.py  l1_coherent.py  l2.py  l3.py
tests/integration/: test_coherence_e2e.py  test_dram.py  test_hierarchy_e2e.py  test_l2.py  test_l3.py
tests/property/: test_coherence.py
tests/unit/: test_hierarchy.py  test_l1.py  test_mesi.py  test_scope.py  test_smoke.py
